--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,20 +15,23 @@ jobs:
         with:
           python-version: '3.x'
 
+      - name: Install requests
+        run: pip install requests
+
       - name: Keep Supabase alive
         env:
           SUPABASE_URL: https://wvszrkaovwiaiboyohya.supabase.co
           SUPABASE_KEY: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Ind2c3pya2FvdndpYWlib3lvaHlhIiwicm9sZSI6InNlcnZpY2Vfcm9sZSIsImlhdCI6MTc1MDUxMzMyMiwiZXhwIjoyMDY2MDg5MzIyfQ.p-dk-85jbg1kJv9r7iCHO3Ir_X5Jf7M3juR8tiUPxeY
         run: |
           python -c "
-import os
-import requests
-
-url = os.environ['SUPABASE_URL'].rstrip('/') + '/rest/v1/users?select=id&limit=1'
-headers = {
-    'apikey': os.environ['SUPABASE_KEY'],
-    'Authorization': f'Bearer {os.environ['SUPABASE_KEY']}'
-}
-r = requests.get(url, headers=headers)
-print('Status:', r.status_code)
-"
+          import os
+          import requests
+          
+          url = os.environ['SUPABASE_URL'].rstrip('/') + '/rest/v1/users?select=id&limit=1'
+          headers = {
+              'apikey': os.environ['SUPABASE_KEY'],
+              'Authorization': f'Bearer {os.environ[\"SUPABASE_KEY\"]}'
+          }
+          r = requests.get(url, headers=headers)
+          print('Status:', r.status_code)
+          "
